# complex_bessel

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Makefile.am  README.md  TODO  TODO.md  build.sh  complex_bessel.h  configure.ac  docs.html  format.sh  index.html  params.json  ref.bib
.github/scripts/: run-clang-format.py
.github/workflows/: main.yml
include/: complex_bessel.h
include/complex_bessel_bits/: besselFunctions.h  errors.h  fortranLinkage.h  sph_besselFunctions.h  utilities.h
src/: amos_c_wrapper.h  amos_iso_c_fortran_wrapper.f90  amos_iso_wrapper.f90  besselFunctions.h  fortranLinkage.h  machine.for  utilities.h  zbesh.for
stylesheets/: stylesheet.css
tests/: 0011.cpp  0011_besselTest.py  0012.cpp  0014.cpp  CMakeLists.txt  gcode-issue2-optimization-breaks-underflow-airy-plot.py  gcode-issue2-optimization-breaks-underflow-airy.cpp  hankelcontours.cpp  hankelcontours.py  hankeltest  hankeltest.cpp  simpleTest.cpp  testValues.cpp  testValues.py  test_besselJ.cpp  test_besselJ.h  test_besselProperties.cpp
